src/parser.output
Terminals which are not used

   TM_MALLOC
   TM_RI
   TM_RC
   TM_WI
   TM_WC
   TM_VAR
   TM_THEN
   TM_DO
   TM_DIV
   TM_MOD


Grammar

    0 $accept: NT_WHOLE $end

    1 NT_WHOLE: NT_CMD

    2 NT_CMD: TM_SKIP
    3       | NT_TYPE TM_IDENT
    4       | TM_IDENT TM_ASGNOP NT_EXPR
    5       | TM_MUL NT_EXPR TM_ASGNOP NT_EXPR
    6       | NT_CMD TM_SEMICOL NT_CMD
    7       | TM_IF TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
    8       | TM_WHILE TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    9 NT_TYPE: TM_INT
   10        | TM_SHORT
   11        | TM_LONG
   12        | TM_BOOL
   13        | NT_TYPE TM_MUL

   14 NT_EXPR: TM_NAT
   15        | TM_IDENT
   16        | TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN
   17        | TM_NOT NT_EXPR
   18        | TM_MINUS NT_EXPR
   19        | TM_MUL NT_EXPR
   20        | TM_BAND NT_EXPR
   21        | TM_LEFT_PAREN NT_TYPE TM_RIGHT_PAREN NT_EXPR
   22        | NT_EXPR TM_PLUS NT_EXPR
   23        | NT_EXPR TM_MINUS NT_EXPR
   24        | NT_EXPR TM_MUL NT_EXPR
   25        | NT_EXPR TM_AND NT_EXPR
   26        | NT_EXPR TM_OR NT_EXPR
   27        | NT_EXPR TM_LT NT_EXPR
   28        | NT_EXPR TM_GT NT_EXPR
   29        | NT_EXPR TM_LE NT_EXPR
   30        | NT_EXPR TM_GE NT_EXPR
   31        | NT_EXPR TM_EQ NT_EXPR
   32        | NT_EXPR TM_NE NT_EXPR


Terminals, with rules where they appear

$end (0) 0
error (256)
TM_NAT (258) 14
TM_IDENT (259) 3 4 15
TM_LEFT_BRACE (260) 7 8
TM_RIGHT_BRACE (261) 7 8
TM_LEFT_PAREN (262) 7 8 16 21
TM_RIGHT_PAREN (263) 7 8 16 21
TM_SEMICOL (264) 6
TM_MALLOC (265)
TM_RI (266)
TM_RC (267)
TM_WI (268)
TM_WC (269)
TM_VAR (270)
TM_IF (271) 7
TM_THEN (272)
TM_ELSE (273) 7
TM_WHILE (274) 8
TM_DO (275)
TM_SKIP (276) 2
TM_INT (277) 9
TM_SHORT (278) 10
TM_LONG (279) 11
TM_BOOL (280) 12
TM_ASGNOP (281) 4 5
TM_OR (282) 26
TM_AND (283) 25
TM_NOT (284) 17
TM_LT (285) 27
TM_LE (286) 29
TM_GT (287) 28
TM_GE (288) 30
TM_EQ (289) 31
TM_NE (290) 32
TM_PLUS (291) 22
TM_MINUS (292) 18 23
TM_MUL (293) 5 13 19 24
TM_DIV (294)
TM_MOD (295)
TM_BAND (296) 20


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
NT_WHOLE (43)
    on left: 1, on right: 0
NT_CMD (44)
    on left: 2 3 4 5 6 7 8, on right: 1 6 7 8
NT_TYPE (45)
    on left: 9 10 11 12 13, on right: 3 13 21
NT_EXPR (46)
    on left: 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31
    32, on right: 4 5 7 8 16 17 18 19 20 21 22 23 24 25 26 27 28 29
    30 31 32


state 0

    0 $accept: . NT_WHOLE $end

    TM_IDENT  shift, and go to state 1
    TM_IF     shift, and go to state 2
    TM_WHILE  shift, and go to state 3
    TM_SKIP   shift, and go to state 4
    TM_INT    shift, and go to state 5
    TM_SHORT  shift, and go to state 6
    TM_LONG   shift, and go to state 7
    TM_BOOL   shift, and go to state 8
    TM_MUL    shift, and go to state 9

    NT_WHOLE  go to state 10
    NT_CMD    go to state 11
    NT_TYPE   go to state 12


state 1

    4 NT_CMD: TM_IDENT . TM_ASGNOP NT_EXPR

    TM_ASGNOP  shift, and go to state 13


state 2

    7 NT_CMD: TM_IF . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 14


state 3

    8 NT_CMD: TM_WHILE . TM_LEFT_PAREN NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_LEFT_PAREN  shift, and go to state 15


state 4

    2 NT_CMD: TM_SKIP .

    $default  reduce using rule 2 (NT_CMD)


state 5

    9 NT_TYPE: TM_INT .

    $default  reduce using rule 9 (NT_TYPE)


state 6

   10 NT_TYPE: TM_SHORT .

    $default  reduce using rule 10 (NT_TYPE)


state 7

   11 NT_TYPE: TM_LONG .

    $default  reduce using rule 11 (NT_TYPE)


state 8

   12 NT_TYPE: TM_BOOL .

    $default  reduce using rule 12 (NT_TYPE)


state 9

    5 NT_CMD: TM_MUL . NT_EXPR TM_ASGNOP NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 23


state 10

    0 $accept: NT_WHOLE . $end

    $end  shift, and go to state 24


state 11

    1 NT_WHOLE: NT_CMD .
    6 NT_CMD: NT_CMD . TM_SEMICOL NT_CMD

    TM_SEMICOL  shift, and go to state 25

    $default  reduce using rule 1 (NT_WHOLE)


state 12

    3 NT_CMD: NT_TYPE . TM_IDENT
   13 NT_TYPE: NT_TYPE . TM_MUL

    TM_IDENT  shift, and go to state 26
    TM_MUL    shift, and go to state 27


state 13

    4 NT_CMD: TM_IDENT TM_ASGNOP . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 28


state 14

    7 NT_CMD: TM_IF TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 29


state 15

    8 NT_CMD: TM_WHILE TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 30


state 16

   14 NT_EXPR: TM_NAT .

    $default  reduce using rule 14 (NT_EXPR)


state 17

   15 NT_EXPR: TM_IDENT .

    $default  reduce using rule 15 (NT_EXPR)


state 18

   16 NT_EXPR: TM_LEFT_PAREN . NT_EXPR TM_RIGHT_PAREN
   21        | TM_LEFT_PAREN . NT_TYPE TM_RIGHT_PAREN NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_INT         shift, and go to state 5
    TM_SHORT       shift, and go to state 6
    TM_LONG        shift, and go to state 7
    TM_BOOL        shift, and go to state 8
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_TYPE  go to state 31
    NT_EXPR  go to state 32


state 19

   17 NT_EXPR: TM_NOT . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 33


state 20

   18 NT_EXPR: TM_MINUS . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 34


state 21

   19 NT_EXPR: TM_MUL . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 35


state 22

   20 NT_EXPR: TM_BAND . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 36


state 23

    5 NT_CMD: TM_MUL NT_EXPR . TM_ASGNOP NT_EXPR
   22 NT_EXPR: NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_MUL NT_EXPR
   25        | NT_EXPR . TM_AND NT_EXPR
   26        | NT_EXPR . TM_OR NT_EXPR
   27        | NT_EXPR . TM_LT NT_EXPR
   28        | NT_EXPR . TM_GT NT_EXPR
   29        | NT_EXPR . TM_LE NT_EXPR
   30        | NT_EXPR . TM_GE NT_EXPR
   31        | NT_EXPR . TM_EQ NT_EXPR
   32        | NT_EXPR . TM_NE NT_EXPR

    TM_ASGNOP  shift, and go to state 37
    TM_OR      shift, and go to state 38
    TM_AND     shift, and go to state 39
    TM_LT      shift, and go to state 40
    TM_LE      shift, and go to state 41
    TM_GT      shift, and go to state 42
    TM_GE      shift, and go to state 43
    TM_EQ      shift, and go to state 44
    TM_NE      shift, and go to state 45
    TM_PLUS    shift, and go to state 46
    TM_MINUS   shift, and go to state 47
    TM_MUL     shift, and go to state 48


state 24

    0 $accept: NT_WHOLE $end .

    $default  accept


state 25

    6 NT_CMD: NT_CMD TM_SEMICOL . NT_CMD

    TM_IDENT  shift, and go to state 1
    TM_IF     shift, and go to state 2
    TM_WHILE  shift, and go to state 3
    TM_SKIP   shift, and go to state 4
    TM_INT    shift, and go to state 5
    TM_SHORT  shift, and go to state 6
    TM_LONG   shift, and go to state 7
    TM_BOOL   shift, and go to state 8
    TM_MUL    shift, and go to state 9

    NT_CMD   go to state 49
    NT_TYPE  go to state 12


state 26

    3 NT_CMD: NT_TYPE TM_IDENT .

    $default  reduce using rule 3 (NT_CMD)


state 27

   13 NT_TYPE: NT_TYPE TM_MUL .

    $default  reduce using rule 13 (NT_TYPE)


state 28

    4 NT_CMD: TM_IDENT TM_ASGNOP NT_EXPR .
   22 NT_EXPR: NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_MUL NT_EXPR
   25        | NT_EXPR . TM_AND NT_EXPR
   26        | NT_EXPR . TM_OR NT_EXPR
   27        | NT_EXPR . TM_LT NT_EXPR
   28        | NT_EXPR . TM_GT NT_EXPR
   29        | NT_EXPR . TM_LE NT_EXPR
   30        | NT_EXPR . TM_GE NT_EXPR
   31        | NT_EXPR . TM_EQ NT_EXPR
   32        | NT_EXPR . TM_NE NT_EXPR

    TM_OR     shift, and go to state 38
    TM_AND    shift, and go to state 39
    TM_LT     shift, and go to state 40
    TM_LE     shift, and go to state 41
    TM_GT     shift, and go to state 42
    TM_GE     shift, and go to state 43
    TM_EQ     shift, and go to state 44
    TM_NE     shift, and go to state 45
    TM_PLUS   shift, and go to state 46
    TM_MINUS  shift, and go to state 47
    TM_MUL    shift, and go to state 48

    $default  reduce using rule 4 (NT_CMD)


state 29

    7 NT_CMD: TM_IF TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE TM_ELSE TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   22 NT_EXPR: NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_MUL NT_EXPR
   25        | NT_EXPR . TM_AND NT_EXPR
   26        | NT_EXPR . TM_OR NT_EXPR
   27        | NT_EXPR . TM_LT NT_EXPR
   28        | NT_EXPR . TM_GT NT_EXPR
   29        | NT_EXPR . TM_LE NT_EXPR
   30        | NT_EXPR . TM_GE NT_EXPR
   31        | NT_EXPR . TM_EQ NT_EXPR
   32        | NT_EXPR . TM_NE NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 50
    TM_OR           shift, and go to state 38
    TM_AND          shift, and go to state 39
    TM_LT           shift, and go to state 40
    TM_LE           shift, and go to state 41
    TM_GT           shift, and go to state 42
    TM_GE           shift, and go to state 43
    TM_EQ           shift, and go to state 44
    TM_NE           shift, and go to state 45
    TM_PLUS         shift, and go to state 46
    TM_MINUS        shift, and go to state 47
    TM_MUL          shift, and go to state 48


state 30

    8 NT_CMD: TM_WHILE TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN TM_LEFT_BRACE NT_CMD TM_RIGHT_BRACE
   22 NT_EXPR: NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_MUL NT_EXPR
   25        | NT_EXPR . TM_AND NT_EXPR
   26        | NT_EXPR . TM_OR NT_EXPR
   27        | NT_EXPR . TM_LT NT_EXPR
   28        | NT_EXPR . TM_GT NT_EXPR
   29        | NT_EXPR . TM_LE NT_EXPR
   30        | NT_EXPR . TM_GE NT_EXPR
   31        | NT_EXPR . TM_EQ NT_EXPR
   32        | NT_EXPR . TM_NE NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 51
    TM_OR           shift, and go to state 38
    TM_AND          shift, and go to state 39
    TM_LT           shift, and go to state 40
    TM_LE           shift, and go to state 41
    TM_GT           shift, and go to state 42
    TM_GE           shift, and go to state 43
    TM_EQ           shift, and go to state 44
    TM_NE           shift, and go to state 45
    TM_PLUS         shift, and go to state 46
    TM_MINUS        shift, and go to state 47
    TM_MUL          shift, and go to state 48


state 31

   13 NT_TYPE: NT_TYPE . TM_MUL
   21 NT_EXPR: TM_LEFT_PAREN NT_TYPE . TM_RIGHT_PAREN NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 52
    TM_MUL          shift, and go to state 27


state 32

   16 NT_EXPR: TM_LEFT_PAREN NT_EXPR . TM_RIGHT_PAREN
   22        | NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_MUL NT_EXPR
   25        | NT_EXPR . TM_AND NT_EXPR
   26        | NT_EXPR . TM_OR NT_EXPR
   27        | NT_EXPR . TM_LT NT_EXPR
   28        | NT_EXPR . TM_GT NT_EXPR
   29        | NT_EXPR . TM_LE NT_EXPR
   30        | NT_EXPR . TM_GE NT_EXPR
   31        | NT_EXPR . TM_EQ NT_EXPR
   32        | NT_EXPR . TM_NE NT_EXPR

    TM_RIGHT_PAREN  shift, and go to state 53
    TM_OR           shift, and go to state 38
    TM_AND          shift, and go to state 39
    TM_LT           shift, and go to state 40
    TM_LE           shift, and go to state 41
    TM_GT           shift, and go to state 42
    TM_GE           shift, and go to state 43
    TM_EQ           shift, and go to state 44
    TM_NE           shift, and go to state 45
    TM_PLUS         shift, and go to state 46
    TM_MINUS        shift, and go to state 47
    TM_MUL          shift, and go to state 48


state 33

   17 NT_EXPR: TM_NOT NT_EXPR .
   22        | NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_MUL NT_EXPR
   25        | NT_EXPR . TM_AND NT_EXPR
   26        | NT_EXPR . TM_OR NT_EXPR
   27        | NT_EXPR . TM_LT NT_EXPR
   28        | NT_EXPR . TM_GT NT_EXPR
   29        | NT_EXPR . TM_LE NT_EXPR
   30        | NT_EXPR . TM_GE NT_EXPR
   31        | NT_EXPR . TM_EQ NT_EXPR
   32        | NT_EXPR . TM_NE NT_EXPR

    $default  reduce using rule 17 (NT_EXPR)


state 34

   18 NT_EXPR: TM_MINUS NT_EXPR .
   22        | NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_MUL NT_EXPR
   25        | NT_EXPR . TM_AND NT_EXPR
   26        | NT_EXPR . TM_OR NT_EXPR
   27        | NT_EXPR . TM_LT NT_EXPR
   28        | NT_EXPR . TM_GT NT_EXPR
   29        | NT_EXPR . TM_LE NT_EXPR
   30        | NT_EXPR . TM_GE NT_EXPR
   31        | NT_EXPR . TM_EQ NT_EXPR
   32        | NT_EXPR . TM_NE NT_EXPR

    TM_MUL  shift, and go to state 48

    $default  reduce using rule 18 (NT_EXPR)


state 35

   19 NT_EXPR: TM_MUL NT_EXPR .
   22        | NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_MUL NT_EXPR
   25        | NT_EXPR . TM_AND NT_EXPR
   26        | NT_EXPR . TM_OR NT_EXPR
   27        | NT_EXPR . TM_LT NT_EXPR
   28        | NT_EXPR . TM_GT NT_EXPR
   29        | NT_EXPR . TM_LE NT_EXPR
   30        | NT_EXPR . TM_GE NT_EXPR
   31        | NT_EXPR . TM_EQ NT_EXPR
   32        | NT_EXPR . TM_NE NT_EXPR

    $default  reduce using rule 19 (NT_EXPR)


state 36

   20 NT_EXPR: TM_BAND NT_EXPR .
   22        | NT_EXPR . TM_PLUS NT_EXPR
   23        | NT_EXPR . TM_MINUS NT_EXPR
   24        | NT_EXPR . TM_MUL NT_EXPR
   25        | NT_EXPR . TM_AND NT_EXPR
   26        | NT_EXPR . TM_OR NT_EXPR
   27        | NT_EXPR . TM_LT NT_EXPR
   28        | NT_EXPR . TM_GT NT_EXPR
   29        | NT_EXPR . TM_LE NT_EXPR
   30        | NT_EXPR . TM_GE NT_EXPR
   31        | NT_EXPR . TM_EQ NT_EXPR
   32        | NT_EXPR . TM_NE NT_EXPR

    $default  reduce using rule 20 (NT_EXPR)


state 37

    5 NT_CMD: TM_MUL NT_EXPR TM_ASGNOP . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 54


state 38

   26 NT_EXPR: NT_EXPR TM_OR . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 55


state 39

   25 NT_EXPR: NT_EXPR TM_AND . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 56


state 40

   27 NT_EXPR: NT_EXPR TM_LT . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 57


state 41

   29 NT_EXPR: NT_EXPR TM_LE . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 58


state 42

   28 NT_EXPR: NT_EXPR TM_GT . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 59


state 43

   30 NT_EXPR: NT_EXPR TM_GE . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 60


state 44

   31 NT_EXPR: NT_EXPR TM_EQ . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 61


state 45

   32 NT_EXPR: NT_EXPR TM_NE . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 62


state 46

   22 NT_EXPR: NT_EXPR TM_PLUS . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 63


state 47

   23 NT_EXPR: NT_EXPR TM_MINUS . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 64


state 48

   24 NT_EXPR: NT_EXPR TM_MUL . NT_EXPR

    TM_NAT         shift, and go to state 16
    TM_IDENT       shift, and go to state 17
    TM_LEFT_PAREN  shift, and go to state 18
    TM_NOT         shift, and go to state 19
    TM_MINUS       shift, and go to state 20
    TM_MUL         shift, and go to state 21
    TM_BAND        shift, and go to state 22

    NT_EXPR  go to state 65


state 49

    6 NT_CMD: NT_CMD . TM_SEMICOL NT_CMD
    6       | NT_CMD TM_SEMICOL NT_CMD .

    TM_SEMICOL  shift, and go to state 25

    $default  reduce using rule 6 (NT_CMD)


state 50
